--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -48,6 +48,9 @@ jobs:
             type=raw,value=${{ github.event.inputs.tag }}-{{sha}}
             type=sha,prefix={{branch}}-,format=short
 
+      - name: Set up QEMU
+        uses: docker/setup-qemu-action@v3
+
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
 
@@ -56,6 +59,7 @@ jobs:
         with:
           context: .
           file: ${{ github.event.inputs.dockerfile }}
+          platforms: linux/amd64,linux/arm64/v8
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
