--- a/.github/workflows/docker-push.yml
+++ b/.github/workflows/docker-push.yml
@@ -21,8 +21,15 @@ env:
   IMAGE_NAME: ${{ github.repository }}
 
 jobs:
-  build-and-push:
-    runs-on: ubuntu-latest
+  build:
+    strategy:
+      matrix:
+        include:
+          - runner: ubuntu-latest
+            platform: linux/amd64
+          - runner: macos-latest
+            platform: linux/arm64
+    runs-on: ${{ matrix.runner }}
     permissions:
       contents: read
       packages: write
@@ -30,6 +37,30 @@ jobs:
     steps:
       - name: Checkout repository
         uses: actions/checkout@v4
+
+      - name: Set up Docker (macOS)
+        if: runner.os == 'macOS'
+        run: |
+          brew install colima docker
+          colima start --arch aarch64 --vm-type=vz --vz-rosetta --cpu 4 --memory 8
+          
+          # Wait for Docker daemon
+          max_attempts=30
+          attempt=0
+          while ! docker info > /dev/null 2>&1; do
+            if [ $attempt -eq $max_attempts ]; then
+              echo "Docker daemon failed to start"
+              colima status
+              exit 1
+            fi
+            echo "Waiting for Docker daemon... (attempt $((attempt+1))/$max_attempts)"
+            sleep 2
+            attempt=$((attempt+1))
+          done
+          echo "Docker daemon is ready!"
+
+      - name: Set up Docker Buildx
+        uses: docker/setup-buildx-action@v3
 
       - name: Log in to the Container registry
         uses: docker/login-action@v3
@@ -48,18 +79,12 @@ jobs:
             type=raw,value=${{ github.event.inputs.tag }}-{{sha}}
             type=sha,prefix={{branch}}-,format=short
 
-      - name: Set up QEMU
-        uses: docker/setup-qemu-action@v3
-
-      - name: Set up Docker Buildx
-        uses: docker/setup-buildx-action@v3
-
       - name: Build and push Docker image
         uses: docker/build-push-action@v5
         with:
           context: .
           file: ${{ github.event.inputs.dockerfile }}
-          platforms: linux/amd64,linux/arm64/v8
+          platforms: ${{ matrix.platform }}
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
@@ -67,3 +92,9 @@ jobs:
           cache-to: type=gha,mode=max
           build-args: |
             VERSION=${{ github.event.inputs.tag }}
+          provenance: false
+
+      - name: Clean up (macOS)
+        if: always() && runner.os == 'macOS'
+        run: |
+          colima stop || true
